--- a/css/layout.css
+++ b/css/layout.css
@@ -9,6 +9,8 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
+  box-shadow:  0px 5px 8px 2px rgba(0, 0, 0, 0.2);
+
 }
 
 .footer {
