--- a/css/layout3.css
+++ b/css/layout3.css
@@ -1,6 +1,17 @@
 .navbar {
   overflow: hidden;
   background-color: #333;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  padding: 0 10px;
+  justify-content: center;
 }
 
 .navbar a {
@@ -15,6 +26,7 @@
 .dropdown {
   float: left;
   overflow: hidden;
+  height: 100%;
 }
 
 .dropdown .dropbtn {
@@ -26,6 +38,8 @@
   background-color: inherit;
   font-family: inherit;
   margin: 0;
+  height: 100%;
+  
 }
 
 .navbar a:hover, .dropdown:hover .dropbtn {
@@ -56,4 +70,91 @@
 
 .dropdown:hover .dropdown-content {
   display: block;
+}
+
+.container {
+    height: 60px;
+    background-color: #333333;
+    display: flex;
+    flex-wrap: wrap;
+    -webkit-box-align: center;
+    align-items: center;
+    overflow: hidden;
+  }
+  
+.container .logo {
+    max-width: 250px;
+    padding: 0 10px;
+    overflow: hidden;
+  }
+  
+.container .logo a {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    height: 60px;
+}
+  
+.container .logo a img {
+max-width: 100%;
+max-height: 60px;
+}
+
+/* ########*/
+
+
+.footer {
+  position: relative;
+  background-color: #414141;
+  font-family: "Roboto";
+  color: #ffffff;
+  width: 100%;
+  height: 6em;
+  left: 0;
+  bottom: 0;
+}
+
+ul {
+  position: absolute;
+  left: 38.75%;
+  right: 5.69%;
+  top: 28%;
+  bottom: 28%;
+  display: flex;
+  justify-content: space-around;
+  height: auto;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+ul button {
+  border-radius: 6%;
+  font-family: inherit;
+  color: #000000;
+  background-color: #ffff;
+  border: none;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  font-family: "Roboto";
+  width: 10em;
+  height: auto;
+}
+
+
+.flex {
+  display: flex;
+  align-items: center;
+}
+@media only screen and (min-width: 768px) {
+}
+
+@media only screen and (min-width: 992px) {
 }
