--- a/css/layout3.css
+++ b/css/layout3.css
@@ -83,6 +83,8 @@ body {
     -webkit-box-align: center;
     align-items: center;
     overflow: hidden;
+    box-shadow:  0px 5px 8px 2px rgba(0, 0, 0, 0.2);
+
   }
   
 .container .logo {
