--- a/css/layout.css
+++ b/css/layout.css
@@ -1,20 +1,114 @@
-.header {
-  position: relative;
-  background-color: #414141;
-  width: 100%;
-  height: 6em;
-  left: 0;
-  top: 0;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  box-shadow: 0px 5px 8px 2px rgba(0, 0, 0, 0.2);
+body {
+  margin: 0;
+  padding-top: 3em ;
 }
+
+.navbar {
+  background-color: #333;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  flex: 1;
+  padding: 0 10px;
+  justify-content: center;
+}
+
+.navbar a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.dropdown {
+  float: left;
+  height: 100%;
+}
+
+.dropdown .dropbtn {
+  font-size: 16px;  
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: "Roboto";
+  margin: 0;
+  height: 100%;
+  
+}
+
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: red;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+  font-family: "Roboto";
+
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.header {
+    height: 60px;
+    background-color: #333333;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    box-shadow:  0px 5px 8px 2px rgba(0, 0, 0, 0.2);
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+  }
+  
+.header .logo {
+    max-width: 250px;
+    padding: 0 10px;
+  }
+  
+.header .logo a {
+
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    height: 60px;
+}
+  
+.header .logo a img {
+max-width: 100%;
+max-height: 60px;
+}
+
+/* ########*/
+
 
 .footer {
   position: relative;
-  background-color: #414141;
+  background-color: #333;
   font-family: "Roboto";
   color: #ffffff;
   width: 100%;
@@ -38,7 +132,6 @@ ul {
 
 ul button {
   border-radius: 6%;
-  font-family: inherit;
   color: #000000;
   background-color: #ffff;
   border: none;
@@ -52,23 +145,14 @@ ul button {
   height: auto;
 }
 
-#logo {
-  position: absolute;
-  height: 5em;
-  left: 3.75%;
-  right: 68.75%;
-  top: 9.6%;
-  bottom: 9.6%;
-}
-
-.logo-div {
-  display: inline-block;
-}
 
 .flex {
   display: flex;
   align-items: center;
 }
+
+
+
 @media only screen and (min-width: 768px) {
 }
 
