--- a/css/layout.css
+++ b/css/layout.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  padding-top: 3em ;
+  padding-top: 3em;
 }
 
 .navbar {
@@ -28,7 +28,7 @@ body {
 }
 
 .dropdown .dropbtn {
-  font-size: 16px;  
+  font-size: 16px;
   border: none;
   outline: none;
   color: white;
@@ -37,10 +37,10 @@ body {
   font-family: "Roboto";
   margin: 0;
   height: 100%;
-  
 }
 
-.navbar a:hover, .dropdown:hover .dropbtn {
+.navbar a:hover,
+.dropdown:hover .dropbtn {
   background-color: red;
 }
 
@@ -49,7 +49,7 @@ body {
   position: absolute;
   background-color: #f9f9f9;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 
@@ -61,7 +61,6 @@ body {
   display: block;
   text-align: left;
   font-family: "Roboto";
-
 }
 
 .dropdown-content a:hover {
@@ -73,38 +72,36 @@ body {
 }
 
 .header {
-    height: 60px;
-    background-color: #333333;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    box-shadow:  0px 5px 8px 2px rgba(0, 0, 0, 0.2);
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 1;
-  }
-  
-.header .logo {
-    max-width: 250px;
-    padding: 0 10px;
-  }
-  
-.header .logo a {
-
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    height: 60px;
+  height: 60px;
+  background-color: #333333;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  box-shadow: 0px 5px 8px 2px rgba(0, 0, 0, 0.2);
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1;
 }
-  
+
+.header .logo {
+  max-width: 250px;
+  padding: 0 10px;
+}
+
+.header .logo a {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  height: 60px;
+}
+
 .header .logo a img {
-max-width: 100%;
-max-height: 60px;
+  max-width: 100%;
+  max-height: 60px;
 }
 
 /* ########*/
-
 
 .footer {
   position: relative;
@@ -145,13 +142,16 @@ ul button {
   height: auto;
 }
 
+#contactos {
+  position: absolute;
+  text-align: right;
+  right: 5%;
+}
 
 .flex {
   display: flex;
   align-items: center;
 }
-
-
 
 @media only screen and (min-width: 768px) {
 }
