--- a/css/layout.css
+++ b/css/layout.css
@@ -3,6 +3,14 @@ body {
   padding-top: 3em;
 }
 
+.main::after {
+  position: relative;
+  width: 100%;
+  content: "";
+  display: flex;
+}
+
+
 .navbar {
   background-color: #333;
   height: 100%;
