--- a/css/invitados.css
+++ b/css/invitados.css
@@ -8,8 +8,17 @@
     flex-direction: column;
     padding-right: 3em;
     padding-bottom: 2em;
-
+    width: 18em;
+    height: 20em;
 }
+
+.main {
+    position: relative;
+    width: 100%;
+    content: "";
+    display: flex;
+    justify-content: center;
+  }
 
 .artists {
     position: relative;
