--- a/css/invitados.css
+++ b/css/invitados.css
@@ -6,8 +6,9 @@
     margin: auto;
     display: flex;
     flex-direction: column;
+    padding-left: 3em;
     padding-right: 3em;
-    padding-bottom: 2em;
+    padding-bottom: 4em;
     width: 18em;
     height: 20em;
 }
@@ -24,7 +25,7 @@
     position: relative;
     margin: 2%;
     float: left;
-    width: 90%;
+    width: auto;
     font-family: "Roboto";
 }
 
