--- a/css/layout.css
+++ b/css/layout.css
@@ -142,7 +142,7 @@ ul button {
   height: auto;
 }
 
-.contacto{
+.contacto {
   display: grid;
   position: relative;
   justify-items: end;
@@ -175,13 +175,35 @@ ul button {
   align-items: center;
 }
 
-#title span{
+#title span {
   border-bottom: 3px solid#de1700;
   margin-top: 5%;
   font-size: 130px;
   font-weight: bold;
   line-height: 25px;
   margin-left: 1em;
+}
+
+.breadcrumb {
+  position: absolute;
+  left: 0%;
+  width: 100%;
+  height: 10%;
+}
+
+div.breadcrumb ul {
+  position: relative;
+  left: 0%;
+}
+
+div.breadcrumb ul li + li::before {
+  content: "/";
+}
+
+div.breadcrumb ul li {
+  list-style: none;
+  display: inline;
+  padding: 0%;
 }
 
 @media only screen and (min-width: 768px) {
