--- a/css/layout.css
+++ b/css/layout.css
@@ -114,34 +114,6 @@ body {
   bottom: 0;
 }
 
-ul {
-  position: absolute;
-  left: 38.75%;
-  right: 5.69%;
-  top: 28%;
-  bottom: 28%;
-  display: flex;
-  justify-content: space-around;
-  height: auto;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-
-ul button {
-  border-radius: 6%;
-  color: #000000;
-  background-color: #ffff;
-  border: none;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  font-family: "Roboto";
-  width: 10em;
-  height: auto;
-}
-
 .contacto {
   display: grid;
   position: relative;
@@ -186,6 +158,7 @@ ul button {
 
 .breadcrumb {
   position: absolute;
+  font-family: "Roboto";
   left: 0%;
   width: 100%;
   height: 10%;
@@ -198,12 +171,21 @@ div.breadcrumb ul {
 
 div.breadcrumb ul li + li::before {
   content: "/";
+  padding: 3px;
 }
 
 div.breadcrumb ul li {
   list-style: none;
   display: inline;
-  padding: 0%;
+}
+
+div.breadcrumb ul li a {
+  text-decoration: none;
+}
+
+div.breadcrumb ul li a:hover {
+  color: #01447e;
+  text-decoration: underline;
 }
 
 @media only screen and (min-width: 768px) {
