--- a/css/actividades.css
+++ b/css/actividades.css
@@ -12,11 +12,22 @@
 
 #miniature {
     float: left;
-    width: 30em;
-    height: 20em;
+    width: 40em;
+    height: 25em;
     margin-top: 3%;
     box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
+    margin-left: 3%;
+}
+
+#miniatureInvert {
+    float: left;
+    width: 40em;
+    height: 25em;
+    margin-top: 3%;
+    box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 5px;
+    margin-right: 3%;
 }
   
 
@@ -29,6 +40,10 @@
     text-align: start;
     font-size: 15px;
 
+}
+
+#textInvert{
+    margin-right: 5%;
 }
 
 #description {
@@ -68,4 +83,9 @@
 
   .activity{
       margin: 2%;
+  }
+
+  #invert{
+      display:flex;
+      flex-direction: row-reverse;
   }
