--- a/css/horarios.css
+++ b/css/horarios.css
@@ -5,4 +5,123 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
+  padding-top: 0.5%; /*para el breadcumbs*/
+}
+
+
+.table-body {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
+  min-height: 100vh;
+  padding: 4rem 0;
+  font-family: -system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+  background-color: white;
+}
+
+table {
+  width: 100%;
+  max-width: 60em;
+}
+table tr:nth-child(even) th {
+  color: #ccc;
+  font-weight: normal;
+}
+table th,
+table td {
+  padding: 0.5rem 1rem;
+}
+table th {
+  font-weight: normal;
+  border-top: dotted #333333;
+  color: black;
+}
+table td {
+  font-size: 0.8rem;
+  font-weight: bold;
+  line-height: 1.4;
+  border-radius: 0.2rem;
+  -webkit-transition: opacity 0.3s ease;
+  transition: opacity 0.3s ease;
+  color: #ffffff
+}
+table td > span {
+  font-size: 0.8em;
+  font-weight: normal;
+  display: block;
+  width: 100%;
+}
+
+.type-1 {
+  background-color: #581846;
+}
+
+.type-2 {
+  background-color: #8F0C3E;
+}
+
+.type-3 {
+  background-color: #C70039 ;
+}
+
+.type-4 {
+  background-color: #FF5833;
+}
+
+.type-5 {
+  background-color: #FFC300;
+}
+
+.type-6 {
+  background-color: #5FA7A3;
+}
+
+
+/* TABS */
+
+.title{
+  font-family: sans-serif;
+  color: #dc2d5e;
+  text-align: center;
+}
+.tabContainer{
+  width: 100%;
+  height: 100%;
+  padding-top: 5%;
+}
+.tabContainer .buttonContainer{
+  height: 15%;
+}
+.tabContainer .buttonContainer button{
+  width: 25%;
+  height: 100%;
+  float: left;
+  border: none;
+  outline:none;
+  cursor: pointer;
+  padding: 10px;
+  font-family: sans-serif;
+  font-size: 18px;
+  background-color:#333;
+  color:white;
+}
+.tabContainer .buttonContainer button:hover{
+  background-color: #DE1800;
+}
+.tabContainer .tabPanel{
+  height: 85%;
+  background-color: white;
+  color: white;
+  text-align: center;
+  padding-top: 105px;
+  box-sizing: border-box;
+  font-family: sans-serif;
+  font-size: 22px;
+  display: block;
 }
