--- a/css/layout.css
+++ b/css/layout.css
@@ -41,7 +41,7 @@ body {
 
 .navbar a:hover,
 .dropdown:hover .dropbtn {
-  background-color: red;
+  background-color:#DE1800;
 }
 
 .dropdown-content {
@@ -150,7 +150,7 @@ body {
 #title span {
   border-bottom: 3px solid #de1700;
   margin-top: 50%;
-  font-size: 130px;
+  font-size: 100px;
   font-weight: bold;
   line-height: 25px;
   margin-left: 1em;
@@ -171,9 +171,9 @@ body {
   float: left;
   /*margin-left: 2%;*/
   background-image: url("../images/fondos/waves2.png");
-  height: 13em;
+  height: 9em;
   padding-top: 8em;
-  background-position: 10%;
+  background-position-y: 35%;
   /*filter: blur(2px);*/
 }
 
@@ -183,6 +183,8 @@ body {
   left: 0%;
   width: 100%;
   height: 10%;
+  background-color: #A28D48;
+  color: #ffffff;
 }
 
 div.breadcrumb ul {
@@ -202,6 +204,7 @@ div.breadcrumb ul li {
 
 div.breadcrumb ul li a {
   text-decoration: none;
+  color: #ffffff;
 }
 
 div.breadcrumb ul li a:hover {
