--- a/css/horarios.css
+++ b/css/horarios.css
@@ -93,7 +93,7 @@ table td > span {
 .tabContainer{
   width: 100%;
   height: 100%;
-  padding-top: 5%;
+  /*padding-top: 5%;*/
 }
 .tabContainer .buttonContainer{
   height: 15%;
