--- a/css/actividades.css
+++ b/css/actividades.css
@@ -1,5 +1,4 @@
 
-
 .main {
     position: relative;
     width: 100%;
@@ -7,8 +6,10 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-  }
+    padding-top: 0.5%;
+    font-family: "Roboto";
 
+  }
 
 #miniature {
     float: left;
