--- a/css/layout.css
+++ b/css/layout.css
@@ -103,22 +103,49 @@ body {
 
 /* ########*/
 
-.footer {
+footer{
   position: relative;
   background-color: #333;
   font-family: "Roboto";
   color: #ffffff;
   width: 100%;
-  height: 6em;
   left: 0;
   bottom: 0;
+  flex-direction: column;
+  display: flex;
+  justify-content: center;
+}
+
+footer div a{
+  text-decoration: none;
+  color: white;
+  line-height: 2em;
+}
+.footer {
+  width: 95%;
+  align-self: center;
+  height: 85%;
+}
+
+.footer::after{
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.about{
+  float: left;
+  width: 80%;
+  height: 100%;
 }
 
 .contacto {
   display: grid;
-  position: relative;
   justify-items: end;
-  width: 100%;
+  width: 20%;
+  position:absolute;
+  bottom:2%;
+  right:1%;
 }
 
 .contactos::after {
