--- a/css/layout.css
+++ b/css/layout.css
@@ -197,11 +197,12 @@ footer div a{
   font-family: "Roboto";
   float: left;
   /*margin-left: 2%;*/
-  background-image: url("../images/fondos/waves2.png");
+  background-image: url("../images/fondos/pollosfinal.png");
   height: 9em;
   padding-top: 8em;
   background-position-y: 35%;
   /*filter: blur(2px);*/
+  background-size: cover;
 }
 
 .breadcrumb {
@@ -210,7 +211,7 @@ footer div a{
   left: 0%;
   width: 100%;
   height: 10%;
-  background-color: #A28D48;
+  background-color: #d5a021;
   color: #ffffff;
 }
 
