--- a/css/layout.css
+++ b/css/layout.css
@@ -197,13 +197,14 @@ footer div a{
   font-family: "Roboto";
   float: left;
   /*margin-left: 2%;*/
-  background-image: url("../images/fondos/pollosfinal.png");
+  background-image: url("../images/fondos/header.png");
   height: 9em;
   padding-top: 8em;
-  background-position-y: 35%;
+  /*background-position-y: 55%;*/
   /*filter: blur(2px);*/
-  background-size: cover;
-}
+  background-size: contain;
+  background-position: right;
+  background-repeat: no-repeat;}
 
 .breadcrumb {
   position: relative;
@@ -211,7 +212,7 @@ footer div a{
   left: 0%;
   width: 100%;
   height: 10%;
-  background-color: #d5a021;
+  background-color: #4d7c8a;
   color: #ffffff;
 }
 
