--- a/css/invitados.css
+++ b/css/invitados.css
@@ -21,7 +21,6 @@
   flex-direction: column;
   padding-top: 0.5%;
   font-family: "Roboto";
-
 }
 
 .artists {
@@ -75,4 +74,31 @@
   font-size: 16px;
   font-weight: 400;
   line-height: 1.8;
+  display: flex;
+  justify-content: center;
+}
+
+.picture {
+  /*width: 20%;*/
+}
+
+.picture img {
+  border-radius: 50%;
+  width: 6em;
+  padding-right: 2em;
+}
+
+article {
+  width: 80%;
+}
+
+.iframe {
+  align-self: center;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+#picture-article {
+  width: 700px;
 }
