--- a/css/horarios.css
+++ b/css/horarios.css
@@ -8,17 +8,16 @@
   padding-top: 0.5%; /*para el breadcumbs*/
 }
 
-
 .table-body {
   display: -webkit-box;
   display: flex;
   -webkit-box-align: center;
-          align-items: center;
+  align-items: center;
   -webkit-box-pack: center;
-          justify-content: center;
+  justify-content: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-          flex-direction: column;
+  flex-direction: column;
   min-height: 100vh;
   padding: 4rem 0;
   font-family: -system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
@@ -49,7 +48,7 @@ table td {
   border-radius: 0.2rem;
   -webkit-transition: opacity 0.3s ease;
   transition: opacity 0.3s ease;
-  color: #ffffff
+  color: #ffffff;
 }
 table td > span {
   font-size: 0.8em;
@@ -63,11 +62,11 @@ table td > span {
 }
 
 .type-2 {
-  background-color: #8F0C3E;
+  background-color: #8f0c3e;
 }
 
 .type-3 {
-  background-color: #C70039 ;
+  background-color: #c70039;
 }
 
 .type-4 {
@@ -75,48 +74,47 @@ table td > span {
 }
 
 .type-5 {
-  background-color: #FFC300;
+  background-color: #ffc300;
 }
 
 .type-6 {
-  background-color: #5FA7A3;
+  background-color: #5fa7a3;
 }
-
 
 /* TABS */
 
-.title{
+.title {
   font-family: Roboto;
   color: #dc2d5e;
   text-align: center;
 }
-.tabContainer{
+.tabContainer {
   width: 100%;
   height: 100%;
   /*padding-top: 5%;*/
 }
-.tabContainer .buttonContainer{
+.tabContainer .buttonContainer {
   display: flex;
-justify-content: center;
+  justify-content: center;
   height: 15%;
 }
-.tabContainer .buttonContainer button{
+.tabContainer .buttonContainer button {
   width: 25%;
   height: 100%;
   float: left;
   border: none;
-  outline:none;
+  outline: none;
   cursor: pointer;
   padding: 10px;
   font-family: Roboto;
   font-size: 18px;
-  background-color:#333;
-  color:white;
+  background-color: #333;
+  color: white;
 }
-.tabContainer .buttonContainer button:hover{
+.tabContainer .buttonContainer button:hover {
   background-color: #4d7c8a;
 }
-.tabContainer .tabPanel{
+.tabContainer .tabPanel {
   height: 85%;
   background-color: white;
   color: white;
@@ -128,11 +126,11 @@ justify-content: center;
   display: block;
 }
 
-#button1{
-  color: white; 
+#button1 {
+  color: white;
   border-bottom-left-radius: 10px;
 }
 
-#button3{
+#button3 {
   border-bottom-right-radius: 10px;
 }
