--- a/css/layout.css
+++ b/css/layout.css
@@ -41,7 +41,7 @@ body {
 
 .navbar a:hover,
 .dropdown:hover .dropbtn {
-  background-color:#DE1800;
+  background-color: #de1800;
 }
 
 .dropdown-content {
@@ -116,7 +116,7 @@ footer{
   justify-content: center;
 }
 
-footer div a{
+footer div a {
   text-decoration: none;
   color: white;
   line-height: 2em;
@@ -127,25 +127,25 @@ footer div a{
   height: 85%;
 }
 
-.footer::after{
+.footer::after .about::after {
   content: "";
   display: table;
   clear: both;
 }
 
-.about{
+.colabout {
   float: left;
-  width: 80%;
-  height: 100%;
+  height: 50%;
+  margin-right: 5%;
 }
 
 .contacto {
   display: grid;
   justify-items: end;
   width: 20%;
-  position:absolute;
-  bottom:2%;
-  right:1%;
+  position: absolute;
+  bottom: 2%;
+  right: 1%;
 }
 
 .contactos::after {
@@ -204,7 +204,8 @@ footer div a{
   /*filter: blur(2px);*/
   background-size: contain;
   background-position: right;
-  background-repeat: no-repeat;}
+  background-repeat: no-repeat;
+}
 
 .breadcrumb {
   position: relative;
