--- a/css/invitados.css
+++ b/css/invitados.css
@@ -4,7 +4,7 @@
   content: "";
   display: flex;
   clear: both;
-  justify-content: center;
+  /*justify-content: center;*/
   align-items: center;
   flex-direction: column;
   padding-top: 0.5%;
@@ -24,7 +24,6 @@
   width: 18em;
   height: 24em;
 }
-
 
 .artists {
   position: relative;
@@ -72,13 +71,16 @@
 
 #information {
   position: relative;
-  margin: 5%;
+  /*margin: 5%;*/
   text-align: justify;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.8;
   display: flex;
   justify-content: center;
+  margin-left: 200px;
+  /*padding: 1px 16px;*/
+  flex-direction: column;
 }
 
 .picture {
@@ -104,4 +106,60 @@ article {
 
 #picture-article {
   width: 700px;
+}
+
+/* sidebar */
+
+.sidebar {
+  margin: 0;
+  padding: 0;
+  width: 200px;
+  position: fixed;
+  height: 100%;
+  overflow: auto;
+  align-self: flex-start;
+  /*border-right: 2px solid #de1700;*/
+  background-color: #f1f1f1;
+}
+
+.sidebar a {
+  display: block;
+  color: black;
+  padding: 16px;
+  text-decoration: none;
+}
+
+.sidebar a.active {
+  background-color: #d1b721;
+  color: white;
+}
+
+.sidebar a:hover:not(.active) {
+  background-color: #555;
+  color: white;
+}
+
+div.content {
+  width: 100%;
+}
+
+@media screen and (max-width: 700px) {
+  .sidebar {
+    width: 100%;
+    height: auto;
+    position: relative;
+  }
+  .sidebar a {
+    float: left;
+  }
+  div.content {
+    margin-left: 0;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .sidebar a {
+    text-align: center;
+    float: none;
+  }
 }
