--- a/css/layout2.css
+++ b/css/layout2.css
@@ -155,9 +155,9 @@ body {
     width: 100%;
     height: 100%;
     overflow: auto;
-    -webkit-transition: left .3s;
-    -o-transition: left .3s;
-    transition: left .3s;
+    -webkit-transition: left 0.3s;
+    -o-transition: left 0.3s;
+    transition: left 0.3s;
   }
 
   .container .navbar ul li a {
