--- a/css/bases.css
+++ b/css/bases.css
@@ -24,7 +24,9 @@
 
 /* acordeon*/
 
-.accordion {
+.accordion,
+.accordion1,
+.accordion2 {
   background-color: #eee;
   color: #444;
   cursor: pointer;
@@ -40,6 +42,18 @@
 .active,
 .accordion:hover {
   background-color: #de1800;
+  color: white;
+}
+
+.active1,
+.accordion1:hover {
+  background-color: #4d7c8a;
+  color: white;
+}
+
+.active2,
+.accordion2:hover {
+  background-color: #d8ac34;
   color: white;
 }
 
