--- a/css/invitados.css
+++ b/css/invitados.css
@@ -85,6 +85,7 @@
 
 .picture {
   /*width: 20%;*/
+  margin-top: 4em;
 }
 
 .picture img {
@@ -95,6 +96,7 @@
 
 article {
   width: 80%;
+  margin-bottom: 5em;
 }
 
 .iframe {
@@ -102,6 +104,8 @@ article {
   display: flex;
   justify-content: center;
   width: 100%;
+  padding-top: 2em;
+  padding-bottom: 2em;
 }
 
 #picture-article {
@@ -182,6 +186,9 @@ div.content {
 }
 
 table {
+  margin-top: 3em;
+  margin-bottom: 3em;
+
   width: 100%;
   max-width: 60em;
   background-color: #f1f1f1;
