--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,12 @@
 .news {
   position: relative;
   float: left;
-  border-left: 4px solid #de1700;
+  border-left: 4px solid #4d7c8a;
   margin-top: 5%;
-  width: 25%;
+  width: 23%;
+  background-color: #f1f1f1;
+  height: 100%;
+  background-color: white;
 }
 
 .main::after {
@@ -11,6 +14,10 @@
   width: 100%;
   content: "";
   display: flex;
+}
+
+.main {
+  background-color: #f1f1f1;
 }
 
 .new::after {
@@ -27,6 +34,8 @@
   float: left;
   width: 70%;
   font-family: "Roboto";
+  background-color: white;
+  border-radius: 5px;
 }
 
 #miniature {
@@ -80,6 +89,12 @@
   height: 24em;
 }
 
+.artists {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
 .text {
   padding-top: 1em;
   position: relative;
@@ -97,6 +112,52 @@
   color: #de1700;
 }
 
-.section1 {
+.section {
   width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.banner {
+  background-color: #d8ac34;
+  flex-direction: row;
+  color: white;
+  padding: 2em;
+}
+
+.banner a {
+  text-align: center;
+  text-decoration: none;
+  color: white;
+}
+
+.content .section .title h1 {
+  border-bottom: 3px solid #de1700;
+}
+
+.title {
+  padding-left: 1em;
+}
+.banner#banner2 {
+  background-color: #4d7c8a;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  justify-content: space-between;
+  flex-direction: row;
+  display: flex;
+  align-items: center;
+}
+
+.localizacion {
+  display: flex;
+}
+
+.banner .column2 {
+  text-align: right;
+  display: flex;
+  flex-direction: column;
+}
+
+.column2 h3 {
+  border-bottom: 2px solid white;
 }
