--- a/css/layout.css
+++ b/css/layout.css
@@ -137,6 +137,7 @@ footer div a {
   float: left;
   height: 50%;
   margin-right: 5%;
+  width: 11em;
 }
 
 .contacto {
@@ -246,4 +247,26 @@ div.breadcrumb ul li a:hover {
 }
 
 @media only screen and (min-width: 992px) {
+}
+
+/* scroll button*/
+
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: red;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
+
+#myBtn:hover {
+  background-color: #555;
 }
