--- a/css/layout.css
+++ b/css/layout.css
@@ -1,66 +1,6 @@
-body {
-  margin: 0;
-  padding-top: 3em;
-}
-
-.navbar {
-  background-color: #333;
-  height: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  flex: 1;
-  padding: 0 10px;
-  justify-content: center;
-}
-
-.navbar a {
-  float: left;
-  font-size: 16px;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-.dropdown {
-  float: left;
-  height: 100%;
-}
-
-.dropdown .dropbtn {
-  font-size: 16px;
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: "Roboto";
-  margin: 0;
-  height: 100%;
-}
-
 .navbar a:hover,
 .dropdown:hover .dropbtn {
   background-color: #de1800;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-  font-family: "Roboto";
 }
 
 .dropdown-content a:hover {
@@ -71,161 +11,10 @@ body {
   display: block;
 }
 
-.header {
-  height: 60px;
-  background-color: #333333;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  box-shadow: 0px 5px 8px 2px rgba(0, 0, 0, 0.2);
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 1;
-}
-
-.header .logo {
-  max-width: 250px;
-  padding: 0 10px;
-}
-
-.header .logo a {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  height: 60px;
-}
-
-.header .logo a img {
-  max-width: 100%;
-  max-height: 60px;
-}
-
-/* ########*/
-
-footer {
-  position: relative;
-  background-color: #333;
-  font-family: "Roboto";
-  color: #ffffff;
-  width: 100%;
-  left: 0;
-  bottom: 0;
-  flex-direction: column;
-  display: flex;
-  justify-content: center;
-}
-
-footer div a {
-  text-decoration: none;
-  color: white;
-  line-height: 2em;
-}
-.footer {
-  width: 95%;
-  align-self: center;
-  height: 85%;
-}
-
 .footer::after .about::after {
   content: "";
   display: table;
   clear: both;
-}
-
-.colabout {
-  float: left;
-  height: 50%;
-  margin-right: 5%;
-  width: 11em;
-}
-
-.contacto {
-  display: grid;
-  justify-items: end;
-  width: 20%;
-  position: absolute;
-  bottom: 2%;
-  right: 1%;
-}
-
-.contactos::after {
-  position: relative;
-  width: 100%;
-  content: "";
-  display: flex;
-}
-
-.rrss {
-  position: relative;
-  float: right;
-}
-
-#iconos {
-  width: 1.3em;
-  height: 1.3em;
-}
-
-#copyright {
-  font-size: 0.5em;
-}
-
-.flex {
-  display: flex;
-  align-items: center;
-}
-
-#title span {
-  border-bottom: 3px solid #de1700;
-  margin-top: 50%;
-  font-size: 100px;
-  font-weight: bold;
-  line-height: 25px;
-  margin-left: 1em;
-}
-
-#titles {
-  border-bottom: 3px solid #de1700;
-  margin-top: 5%;
-  font-size: 30px;
-  font-weight: bold;
-  line-height: 25px;
-  width: 60%;
-}
-
-.titleBox {
-  width: 100%;
-  font-family: "Roboto";
-  float: left;
-  /*margin-left: 2%;*/
-  background-image: url("../images/fondos/header.png");
-  height: 9em;
-  padding-top: 8em;
-  /*background-position-y: 55%;*/
-  /*filter: blur(2px);*/
-  background-size: contain;
-  background-position: right;
-  background-repeat: no-repeat;
-}
-
-.breadcrumb {
-  position: relative;
-  font-family: "Roboto";
-  left: 0%;
-  width: 100%;
-  height: 10%;
-  background-color: #4d7c8a;
-  color: #ffffff;
-}
-
-div.breadcrumb ul {
-  position: relative;
-  left: 0%;
-}
-
-div.breadcrumb ul li + li::before {
-  content: "/";
-  padding: 3px;
 }
 
 div.breadcrumb ul li {
@@ -243,30 +32,233 @@ div.breadcrumb ul li a:hover {
   text-decoration: underline;
 }
 
+#myBtn:hover {
+  background-color: #555;
+}
+
+.dropdown {
+  float: left;
+  height: 100%;
+}
+
+.rrss {
+  position: relative;
+  float: right;
+}
+
 @media only screen and (min-width: 768px) {
 }
 
 @media only screen and (min-width: 992px) {
-}
+  body {
+    margin: 0;
+    padding-top: 3em;
+  }
 
-/* scroll button*/
+  .navbar {
+    background-color: #333;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    flex: 1;
+    padding: 0 10px;
+    justify-content: center;
+  }
 
-#myBtn {
-  display: none;
-  position: fixed;
-  bottom: 20px;
-  right: 30px;
-  z-index: 99;
-  font-size: 18px;
-  border: none;
-  outline: none;
-  background-color: red;
-  color: white;
-  cursor: pointer;
-  padding: 15px;
-  border-radius: 4px;
-}
+  .navbar a {
+    float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
 
-#myBtn:hover {
-  background-color: #555;
+  .dropdown .dropbtn {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: "Roboto";
+    margin: 0;
+    height: 100%;
+  }
+
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+  }
+
+  .dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+    font-family: "Roboto";
+  }
+
+  .header {
+    height: 60px;
+    background-color: #333333;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    box-shadow: 0px 5px 8px 2px rgba(0, 0, 0, 0.2);
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+  }
+
+  .header .logo {
+    max-width: 250px;
+    padding: 0 10px;
+  }
+
+  .header .logo a {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    height: 60px;
+  }
+
+  .header .logo a img {
+    max-width: 100%;
+    max-height: 60px;
+  }
+
+  footer {
+    position: relative;
+    background-color: #333;
+    font-family: "Roboto";
+    color: #ffffff;
+    width: 100%;
+    left: 0;
+    bottom: 0;
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+  }
+
+  footer div a {
+    text-decoration: none;
+    color: white;
+    line-height: 2em;
+  }
+  .footer {
+    width: 95%;
+    align-self: center;
+    height: 85%;
+  }
+
+  .colabout {
+    float: left;
+    height: 50%;
+    margin-right: 5%;
+    width: 11em;
+  }
+
+  .contacto {
+    display: grid;
+    justify-items: end;
+    width: 20%;
+    position: absolute;
+    bottom: 2%;
+    right: 1%;
+  }
+
+  .contactos::after {
+    position: relative;
+    width: 100%;
+    content: "";
+    display: flex;
+  }
+
+  #iconos {
+    width: 1.3em;
+    height: 1.3em;
+  }
+
+  #copyright {
+    font-size: 0.5em;
+  }
+
+  /* .flex {
+    display: flex;
+    align-items: center;
+  } */
+
+  #title span {
+    border-bottom: 3px solid #de1700;
+    margin-top: 50%;
+    font-size: 100px;
+    font-weight: bold;
+    line-height: 25px;
+    margin-left: 1em;
+  }
+
+  #titles {
+    border-bottom: 3px solid #de1700;
+    margin-top: 5%;
+    font-size: 30px;
+    font-weight: bold;
+    line-height: 25px;
+    width: 60%;
+  }
+
+  .titleBox {
+    width: 100%;
+    font-family: "Roboto";
+    float: left;
+    background-image: url("../images/fondos/header.png");
+    height: 9em;
+    padding-top: 8em;
+    background-size: contain;
+    background-position: right;
+    background-repeat: no-repeat;
+  }
+
+  .breadcrumb {
+    position: relative;
+    font-family: "Roboto";
+    left: 0%;
+    width: 100%;
+    height: 10%;
+    background-color: #4d7c8a;
+    color: #ffffff;
+  }
+
+  div.breadcrumb ul {
+    position: relative;
+    left: 0%;
+  }
+
+  div.breadcrumb ul li + li::before {
+    content: "/";
+    padding: 3px;
+  }
+
+  #myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: red;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
+  }
 }
