--- a/css/index.css
+++ b/css/index.css
@@ -6,17 +6,6 @@
   background-color: white;
 }
 
-.main::after {
-  position: relative;
-  width: 100%;
-  content: "";
-  display: flex;
-}
-
-.main {
-  background-color: #f1f1f1;
-}
-
 .new::after {
   position: relative;
   width: 100%;
@@ -104,6 +93,10 @@
   border-bottom: 3px solid #de1700;
 }
 
+.title {
+  width: 33%;
+}
+
 .banner#banner2 {
   background-color: #4d7c8a;
   border-bottom-left-radius: 5px;
@@ -163,8 +156,8 @@
   }
 
   .artist {
-    margin-left: 3em;
-    margin-right: 3em;
+    /*margin-left: 3em;
+    margin-right: 3em;*/
     margin-bottom: 4em;
     margin-top: 3em;
     width: 18em;
@@ -222,8 +215,8 @@
   }
 
   .artist {
-    margin-left: 3em;
-    margin-right: 3em;
+    /*margin-left: 3em;
+    margin-right: 3em;*/
     margin-bottom: 4em;
     margin-top: 3em;
     width: 18em;
