--- a/css/layout.css
+++ b/css/layout.css
@@ -1,67 +1,3 @@
-body {
-  margin: 0;
-  padding-top: 3em;
-  font-family: "Roboto";
-}
-
-.navbar a:hover,
-.dropdown:hover .dropbtn {
-  background-color: #de1800;
-}
-
-.dropdown-content a:hover {
-  background-color: #ddd;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-.footer::after .about::after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-div.breadcrumb ul li {
-  list-style: none;
-  display: inline;
-}
-
-div.breadcrumb ul li a {
-  text-decoration: none;
-  color: #ffffff;
-}
-
-div.breadcrumb ul li a:hover {
-  color: #01447e;
-  text-decoration: underline;
-}
-
-#myBtn:hover {
-  background-color: #555;
-}
-
-.dropdown {
-  float: left;
-  height: 100%;
-}
-
-.rrss {
-  position: relative;
-  float: right;
-}
-
-div.breadcrumb ul {
-  position: relative;
-  left: 0%;
-}
-
-div.breadcrumb ul li + li::before {
-  content: "/";
-  padding: 3px;
-}
-
 @media only screen and (min-width: 768px) {
   .navbar {
     background-color: #333;
@@ -459,4 +395,69 @@ div.breadcrumb ul li + li::before {
     padding: 15px;
     border-radius: 4px;
   }
+}
+
+body {
+  margin: 0;
+  padding-top: 3em;
+  font-family: "Roboto";
+}
+
+.navbar a:hover,
+.dropdown:hover .dropbtn {
+  background-color: #de1800;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.footer::after,
+.about::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+div.breadcrumb ul li {
+  list-style: none;
+  display: inline;
+}
+
+div.breadcrumb ul li a {
+  text-decoration: none;
+  color: #ffffff;
+}
+
+div.breadcrumb ul li a:hover {
+  color: #01447e;
+  text-decoration: underline;
+}
+
+#myBtn:hover {
+  background-color: #555;
+}
+
+.dropdown {
+  float: left;
+  height: 100%;
+}
+
+.rrss {
+  position: relative;
+  float: right;
+}
+
+div.breadcrumb ul {
+  position: relative;
+  left: 0%;
+}
+
+div.breadcrumb ul li + li::before {
+  content: "/";
+  padding: 3px;
 }
