--- a/css/actividades.css
+++ b/css/actividades.css
@@ -1,4 +1,16 @@
 @media only screen and (min-width: 768px) {
+  .main {
+    position: relative;
+    width: 100%;
+    content: "";
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding-top: 0.5%;
+    font-family: "Roboto";
+    clear: both;
+  }
+
   #miniature {
     float: left;
     width: 40em;
@@ -73,6 +85,18 @@
 }
 
 @media only screen and (min-width: 992px) {
+  .main {
+    position: relative;
+    width: 100%;
+    content: "";
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding-top: 0.5%;
+    font-family: "Roboto";
+    clear: both;
+  }
+
   #miniature {
     float: left;
     width: 40em;
