--- a/css/horarios.css
+++ b/css/horarios.css
@@ -1,4 +1,14 @@
 @media only screen and (min-width: 768px) {
+  .main {
+    position: relative;
+    width: 100%;
+    content: "";
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding-top: 0.5%;
+  }
+
   .table-body {
     display: -webkit-box;
     display: flex;
@@ -83,6 +93,16 @@
 }
 
 @media only screen and (min-width: 992px) {
+  .main {
+    position: relative;
+    width: 100%;
+    content: "";
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding-top: 0.5%;
+  }
+
   .table-body {
     display: -webkit-box;
     display: flex;
