--- a/css/bases.css
+++ b/css/bases.css
@@ -1,4 +1,14 @@
 @media only screen and (min-width: 768px) {
+  .main {
+    position: relative;
+    width: 100%;
+    content: "";
+    clear: both;
+    display: flex;
+    flex-direction: column;
+    padding-top: 0.5%;
+  }
+
   .content {
     margin: 2%;
     align-self: center;
@@ -32,6 +42,16 @@
 }
 
 @media only screen and (min-width: 992px) {
+  .main {
+    position: relative;
+    width: 100%;
+    content: "";
+    clear: both;
+    display: flex;
+    flex-direction: column;
+    padding-top: 0.5%;
+  }
+
   .content {
     margin: 2%;
     align-self: center;
