--- a/css/inscripcion.css
+++ b/css/inscripcion.css
@@ -1,3 +1,13 @@
+.main {
+  position: relative;
+  width: 100%;
+  content: "";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 0.5%;
+}
 
 .col {
   position: relative;
