--- a/css/noticias.css
+++ b/css/noticias.css
@@ -6,3 +6,14 @@
   font-weight: 400;
   line-height: 1.8;
 }
+
+.main {
+  position: relative;
+  width: 100%;
+  content: "";
+  clear: both;
+  display: flex;
+  flex-direction: column;
+  padding-top: 0.5%;
+  font-family: "Roboto";
+}
