--- a/css/index.css
+++ b/css/index.css
@@ -180,7 +180,7 @@
   }
 }
 
-@media only screen and (min-width: 992px) {
+@media only screen and (max-width: 767px) {
   .news {
     margin-top: 5%;
     width: 23%;
