--- a/css/actividades.css
+++ b/css/actividades.css
@@ -84,7 +84,7 @@
   }
 }
 
-@media only screen and (min-width: 992px) {
+@media only screen and (max-width: 767px) {
   .main {
     position: relative;
     width: 100%;
