--- a/css/horarios.css
+++ b/css/horarios.css
@@ -92,7 +92,7 @@
   }
 }
 
-@media only screen and (min-width: 992px) {
+@media only screen and (max-width: 767px) {
   .main {
     position: relative;
     width: 100%;
