--- a/css/layout.css
+++ b/css/layout.css
@@ -260,7 +260,7 @@ div.breadcrumb ul li a:hover {
   }
 }
 
-@media only screen and (min-width: 992px) {
+@media only screen and (max-width: 767px) {
   .navbar {
     background-color: #333;
     height: 100%;
