--- a/css/index.css
+++ b/css/index.css
@@ -56,7 +56,6 @@
 
 .artists {
   display: flex;
-  flex-direction: row;
   justify-content: center;
 }
 
@@ -122,6 +121,9 @@
 }
 
 @media only screen and (min-width: 768px) {
+  .artists {
+    flex-direction: row;
+  }
   .news {
     margin-top: 5%;
     width: 23%;
@@ -181,6 +183,9 @@
 }
 
 @media only screen and (max-width: 767px) {
+  .artists {
+    flex-direction: column;
+  }
   .news {
     margin-top: 5%;
     width: 23%;
