--- a/css/localizacion.css
+++ b/css/localizacion.css
@@ -1,29 +1,63 @@
-.main {
-  position: relative;
-  width: 100%;
-  content: "";
-  clear: both;
-  display: flex;
-  flex-direction: column;
-  padding-top: 0.5%;
-  font-family: "Roboto";
+@media only screen and (min-width: 768px) {
+  .main {
+    position: relative;
+    width: 100%;
+    content: "";
+    clear: both;
+    display: flex;
+    flex-direction: column;
+    padding-top: 0.5%;
+    font-family: "Roboto";
+  }
+
+  .content {
+    margin: 2%;
+    align-self: center;
+    width: 85%;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.8;
+  }
+
+  .main article h1 {
+    border-bottom: 3px solid #de1700;
+  }
+
+  .main article iframe {
+    width: 600px;
+    height: 450px;
+    border: 0;
+  }
 }
 
-.content {
-  margin: 2%;
-  align-self: center;
-  width: 85%;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.8;
-}
+@media only screen and (max-width: 767px) {
+  .main {
+    position: relative;
+    width: 100%;
+    content: "";
+    clear: both;
+    display: flex;
+    flex-direction: column;
+    padding-top: 0.5%;
+    font-family: "Roboto";
+  }
 
-.main article h1 {
-  border-bottom: 3px solid #de1700;
-}
+  .content {
+    margin: 2%;
+    align-self: center;
+    width: 85%;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.8;
+  }
 
-.main article iframe {
-  width: 600px;
-  height: 450px;
-  border: 0;
+  .main article h1 {
+    border-bottom: 3px solid #de1700;
+  }
+
+  .main article iframe {
+    width: 600px;
+    height: 450px;
+    border: 0;
+  }
 }
