--- a/css/noticias.css
+++ b/css/noticias.css
@@ -1,19 +1,43 @@
-.content {
-  margin: 2%;
-  align-self: center;
-  width: 85%;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.8;
+@media only screen and (min-width: 768 px) {
+  .content {
+    margin: 2%;
+    align-self: center;
+    width: 85%;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.8;
+  }
+
+  .main {
+    position: relative;
+    width: 100%;
+    content: "";
+    clear: both;
+    display: flex;
+    flex-direction: column;
+    padding-top: 0.5%;
+    font-family: "Roboto";
+  }
 }
 
-.main {
-  position: relative;
-  width: 100%;
-  content: "";
-  clear: both;
-  display: flex;
-  flex-direction: column;
-  padding-top: 0.5%;
-  font-family: "Roboto";
+@media only screen and (max-width: 767 px) {
+  .content {
+    margin: 2%;
+    align-self: center;
+    width: 85%;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.8;
+  }
+
+  .main {
+    position: relative;
+    width: 100%;
+    content: "";
+    clear: both;
+    display: flex;
+    flex-direction: column;
+    padding-top: 0.5%;
+    font-family: "Roboto";
+  }
 }
