--- a/css/index.css
+++ b/css/index.css
@@ -225,13 +225,12 @@
   .artist {
     /*margin-left: 3em;
     margin-right: 3em;*/
-    width: 18em;
-    height: 24em;
   }
 
   .text {
     padding-top: 1em;
     width: 90%;
+    margin-left: 5%;
     font-size: 15px;
   }
 
