--- a/css/index.css
+++ b/css/index.css
@@ -187,7 +187,6 @@
   .artists {
     flex-direction: column;
     margin-top: 3em;
-    margin-bottom: 3m;
     /**/
   }
   .news {
@@ -225,6 +224,7 @@
   .artist {
     /*margin-left: 3em;
     margin-right: 3em;*/
+    margin-bottom: 3em;
   }
 
   .text {
