--- a/css/inscripcion.css
+++ b/css/inscripcion.css
@@ -75,6 +75,7 @@
   input[type="date"],
   select {
     width: 100%;
+    padding: 2%;
     border: 1px solid #ccc;
     border-radius: 4px;
     resize: vertical;
